Run tests w/o patch

--- a/test/test-patched.html
+++ b/test/test-patched.html
@@ -12,7 +12,7 @@
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <script src="../bower_components/jquery/jquery.js"></script>
   <script src="../bower_components/selector-set/selector-set.js"></script>
-  <script xsrc="../jquery.selector-set.js"></script>
+  <script src="../jquery.selector-set.js"></script>
 
   <script src="./test.js"></script>
 </body>
