--- a/test/test-2-0.html
+++ b/test/test-2-0.html
@@ -9,9 +9,10 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
 
+  <script src="http://code.jquery.com/jquery-2.0.3.js"></script>
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
-  <script src="../bower_components/jquery/jquery.js"></script>
   <script src="../bower_components/selector-set/selector-set.js"></script>
+  <script src="../jquery.selector-set.js"></script>
 
   <script src="./test.js"></script>
 </body>
