--- a/test/patched/1-9.html
+++ b/test/patched/1-9.html
@@ -11,6 +11,7 @@
 
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script src="../../bower_components/qunit/qunit/qunit.js"></script>
+  <script src="./../saucelabs.js"></script>
   <script src="../../bower_components/selector-set/selector-set.js"></script>
   <script src="../../jquery.selector-set.js"></script>
 
