--- a/test/unpatched/1-8.html
+++ b/test/unpatched/1-8.html
@@ -11,6 +11,7 @@
 
   <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
   <script src="../../bower_components/qunit/qunit/qunit.js"></script>
+  <script src="./../saucelabs.js"></script>
   <script src="../../bower_components/selector-set/selector-set.js"></script>
 
   <script src="./../test.js"></script>
